final version cdc22

--- a/Project.toml
+++ b/Project.toml
@@ -14,6 +14,7 @@ LazySets = "b4f0291d-fe17-52bc-9479-3d1a343d9043"
 LinearAlgebra = "37e2e46d-f89d-539d-b4ee-838fcccc9c8e"
 MathematicalSystems = "d14a8603-c872-5ed3-9ece-53e0e82e39da"
 MutableArithmetics = "d8a4904e-b15c-11e9-3269-09a3773c0cb0"
+OSQP = "ab2f91bb-94b4-55e3-9ba0-7f65df51de79"
 Polyhedra = "67491407-f73d-577b-9b50-8179a7c68029"
 Printf = "de0858da-6303-5e67-8744-51eddeeeb8d7"
 ProgressMeter = "92933f4c-e287-5a05-a399-4b506db050ca"
